tests/agl/rejections/type/lambda_required_after_defaulted.agl
fn(x: int = 5, y: int) -> int => x + y
